course categories added and Date validation removed in backend
